# MLOPS_02_2025

./: .gitignore  README.md
00-pré-avaliação/: prova-selecao.ipynb
02-dados/: [Dados]_Aula_1_1.ipynb  [Dados]_Exercicio_1.ipynb  [Dados]_Exercicio_2.ipynb  [Resolucao]Dados-Desafio.ipynb  [Resolucao]Dados-Exercicio1.ipynb  [Resolucao]Dados-Exercicio2.ipynb
03-modelagem/: Dockerfile  [Modelagem]_Aula_2_1.ipynb  [Modelagem]_Aula_2_2.ipynb  requirements.txt  start_server.sh
04-deploy/: [Deploy]_Aula_4_1.ipynb  [Deploy]_Aula_4_2.ipynb  exercicios.ipynb  main.py  pyproject.toml
04-deploy/Deploy_Aula_4_1/: [Deploy]_Aula_4_1.ipynb
04-deploy/Deploy_Aula_4_2/model_fit/: experimentation.ipynb  requirements.txt
04-deploy/Deploy_Aula_4_2/serving/: .dockerignore  Dockerfile  README.md  main.py  requirements.txt
04-deploy/Deploy_Aula_4_2/serving/app/core/: config.py  model_manager.py
04-deploy/Deploy_Aula_4_2/serving/encoder/: encoder.joblib
04-deploy/[Deploy]_Aula_4_1/: requirements.txt
04-deploy/[Deploy]_Aula_4_2/model_fit/: experimentation.ipynb
04-deploy/[Deploy]_Aula_4_2/serving/: Dockerfile  README.md  pyproject.toml  requirements.txt
04-deploy/[Deploy]_Aula_4_2/serving/app/api/: endpoints.py
04-deploy/[Deploy]_Aula_4_2/serving/app/core/: config.py  model_manager.py
04-deploy/[Deploy]_Aula_4_2/serving/app/models/: schemas.py
04-deploy/extra/: docker-basics.ipynb
