[project]
name = "serving"
version = "0.1.0"
description = "Machine Learning Model Serving API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.4",
    "uvicorn>=0.27.1",
    "pydantic>=2.6.1",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "python-multipart>=0.0.9",
    "python-json-logger>=2.0.7",
    "mlflow>=3.5.1",
    "pydantic-settings>=2.11.0",
]
